sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:17: error: not found: value Functional
Functional test() 
^